--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,5 +28,10 @@
   "editor.autoClosingQuotes": "always",
   "editor.autoClosingComments": "always",
   "editor.autoSurround": "languageDefined",
-  "i18n-ally.localesPaths": ["languages"]
+  "i18n-ally.sortKeys": true,
+  "i18n-ally.keepFulfilled": true,
+  "i18n-ally.sourceLanguage": "english",
+  "i18n-ally.enabledParsers": ["json", "yaml", "js", "ts"],
+  "i18n-ally.keystyle": "nested",
+  "i18n-ally.localesPaths": ["locales"]
 }
