--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@expo/metro-runtime": "^5.0.4",
     "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-documents/picker": "^10.1.5",
     "@react-native-picker/picker": "^2.11.1",
     "@react-navigation/bottom-tabs": "^7.4.5",
     "@react-navigation/elements": "^2.6.2",
