--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -30,7 +30,7 @@
   "editor.autoSurround": "languageDefined",
   "i18n-ally.sortKeys": true,
   "i18n-ally.keepFulfilled": true,
-  "i18n-ally.sourceLanguage": "english",
+  "i18n-ally.sourceLanguage": "en",
   "i18n-ally.enabledParsers": ["json", "yaml", "js", "ts"],
   "i18n-ally.keystyle": "nested",
   "i18n-ally.localesPaths": ["locales"]
