--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "react-native-screens": "~4.11.1",
     "react-native-svg": "^15.12.1",
     "react-native-web": "~0.20.0",
-    "react-native-webview": "13.13.5"
+    "react-native-webview": "13.13.5",
+    "zod": "^4.0.14"
   },
   "devDependencies": {
     "@jest/globals": "^30.0.5",
