--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@react-navigation/elements": "^2.6.2",
     "@react-navigation/native": "^7.1.17",
     "@tanstack/react-query": "^5.84.1",
+    "@uidotdev/usehooks": "^2.4.1",
     "expo": "~53.0.20",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.7",
