--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-i18next": "^15.6.1",
+    "react-merge-refs": "^3.0.2",
     "react-native": "0.79.5",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "~3.17.5",
